# smart-blogging-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ddos.py  docker-compose-dev.yml  docker-compose.yml  gpt_example.py  init_data.py  main.py  nginx.conf  populate_db.py  project_workspace.code-workspace  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 8a2015057bb6_initial_commit.py  af684a83fdd6_initial_commit.py
scripts/: first_launch.sh  start_script.sh
src/: log_config.py
src/api/: auth.py  autocomplete.py  comments.py  illustrate.py  posts.py  profile.py  rating.py  router.py  tags.py  users.py
src/conf/: config.py
src/database/: db.py
src/database/models/: __init__.py  comments.py  post.py  posts.py  rating.py  tags.py  user.py  users.py
src/repository/: comments.py  posts.py  profile.py  ratings.py  tags.py  users.py
src/schemas/: comments.py  posts.py  profiles.py  ratings.py  tags.py  users.py
src/services/: auth.py  autocomplete.py  cloudinarry.py  email.py  role_checker.py
src/services/templates/: email_template.html
tests/: autocompletetest.py  check_limiter.py  cloudinarry.py  conftest.py  test_api_auth.py  test_api_users.py
tests/comments/: test_api_comments.py  test_repository_comments.py
tests/posts/: test_api_posts.py  test_repository_posts.py
tests/profile/: test_api_profile.py  test_repository_profile.py
tests/unit/: test_api_ratings.py  test_api_tags.py  test_repository_users.py  test_service_auth.py
